2007-09-03  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/racoon.conf.5: Correct wins4 and nbns4 modecfg option syntax.
	* src/racoon/cftoken.l: Add nbns4 as an alias for wins4.

2007-08-07  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_xauth.c: Don't mix up RADIUS authentication and
	  authorization ports. Allow interoperability with freeradius

2007-07-18  Matthew Grooms  <mgrooms@shrew.net>
	* src/racoon/racoon.conf.5: various man page updates

2007-07-18  Yvan Vanhullebus  <vanhu@netasq.com>
	* configure.ac	
	src/libipsec/ipsec_dump_policy.c
	src/libipsec/ipsec_get_policylen.c
	src/libipsec/ipsec_strerror.c
	src/libipsec/key_debug.c
	src/libipsec/libpfkey.h
	src/libipsec/pfkey.c
	src/libipsec/pfkey_dump.c
	src/libipsec/policy_parse.y
	src/libipsec/policy_token.l
	src/libipsec/test-policy-priority.c
	src/racoon/admin.c
	src/racoon/backupsa.c
	src/racoon/cfparse.y
	src/racoon/cftoken.l
	src/racoon/ipsec_doi.c
	src/racoon/isakmp.c
	src/racoon/isakmp_inf.c
	src/racoon/isakmp_quick.c
	src/racoon/pfkey.c
	src/racoon/policy.c
	src/racoon/proposal.c
	src/racoon/remoteconf.c
	src/racoon/sainfo.c
	src/racoon/session.c
	src/racoon/sockmisc.c
	src/racoon/strnames.c
	src/setkey/parse.y
	src/setkey/setkey.c
	src/setkey/token.l:
	use a single PATH_IPSEC_H to fix some path_to_ipsec.h issues.

2007-07-16  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/proposal.c: indentation
	* src/racoon/grabmyaddr.c: fixed a socket leak.
	
2007-06-07  Emmanuel Dreyfus <manu@netbsd.org>
	From Paul Winder <Paul.Winder@tadpole.com>:
	* src/racoon/isakmp_cfg.c: Fix ignored INTERNAL_DNS4_LIST

2007-06-06  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.c: ignore obsolete lifebyte when validating
	  reloaded configuration.
	From Jianli Liu <jlliu@nortel.com>:
	* src/racoon/session.c: speeds up interfaces update when they changed.
	From Rong-En Fan <rafan@freebsd.org>
	* src/racoon/{var.h|eaytest.c}: fixed compilation with gcc 4.2
